--- a/packages/splits-kit/package.json
+++ b/packages/splits-kit/package.json
@@ -54,7 +54,8 @@
     "react-blockies": "^1.4.1",
     "react-hook-form": "^7.47.0",
     "react-number-format": "^5.3.1",
-    "styled-components": "^6.1.0"
+    "styled-components": "^6.1.0",
+    "viem": "^2.27.0"
   },
   "peerDependencies": {
     "react": "17.x.x || 18.x.x",
